# clickboard_demos

./: .gitignore  .gitmodules  LICENSE  README.md
ATTSK2/: README.md
ATTSK2/LCDmini_demo/: readme.md
ATTSK2/click_demo/: Makefile.am  c_demo.c  configure.ac  cpp_demo.cpp  i2c.hpp  i2c_hardware.c  i2c_interface.cpp  i2c_interface.hpp  oledb.cpp  readme.md  spi.hpp
ATTSK2/click_demo/.deps/: c_demo.Po  cpp_demo.Po  i2c_interface.Po  oled_test.Po  oledb.Po
ATTSK2/flame_demo/: Makefile.am  configure.ac  flame_demo.c
ATTSK2/flame_demo/.deps/: flame_demo.Po
ATTSK2/hr4_demo/: Makefile.am  configure.ac  hr4_demo.c
ATTSK2/lcdmini_demo/: Makefile.am  configure.ac  lcdmini_demo.c
ATTSK2/lsm6dsl_demo/: Makefile.am  configure.ac  lsm6dsl_demo.c
ATTSK2/relay_demo/: Makefile.am  autogen.sh  configure.ac  relay_demo.c
ATTSK2/relay_demo/.deps/: relay_demo.Po
ATTSK2/tof_demo/: Makefile.am  configure.ac
ATTSK2/tof_demo/.deps/: tof_demo-tof_demo.Po  tof_demo-vl53l0x_i2c.Po
ATTSK2/uart_i2cspi_demo/: Makefile.am  configure.ac  uarti2cspi_demo.c
K64F/: AvnetBG96_azure_client.cpp  LICENSE  README.md  button.hpp  mbed_app.json  mbed_settings.py  toolchain_debug.json
K64F/LCDmini_demo/: lcdmini_demo.cpp
K64F/click_demo/: build.sh  c_demo.cpp  readme.md
K64F/flame_demo/: flame_demo.cpp
K64F/hr4_demo/: hr4_demo.cpp
K64F/lsm6dsl_demo/: lsm6dsl_demo.cpp
K64F/oled_demo/: mbed_app.json  oled_test.cpp  oledb_demo.cpp
K64F/relay_demo/: clicklib.lib  mbed.bld  mbed_app.json  relay_demo.cpp
K64F/tof_demo/: LICENSE  mbed_app.json  tof_demo.cpp  vl53l0x_i2c.cpp
SPHERE_MT3620/AirQuality5_demo/: AvnetSphereAirQuality5.sln  CMakeLists.txt  app_manifest.json  build_options.h  device_twin.c
SPHERE_MT3620/AirQuality5_demo/AvnetSphereAirQuality5/: AvnetSphereAirQuality5.vcxproj  AvnetSphereAirQuality5.vcxproj.filters  app_manifest.json  build_options.h  connection_strings.h  main.c
SPHERE_MT3620/AirQuality5_demo/ClickLib/: ClickLib.vcxproj  ClickLib.vcxproj.filters
SPHERE_MT3620/AirQuality5_demo/IoT Central App Device template/: Device_Export_20190820_161541.csv
SPHERE_MT3620/LCDmini_demo/: CMakeLists.txt  LCDmini_demo.sln  app_manifest.json  i2c.c  main.c
SPHERE_MT3620/LCDmini_demo/ClickLib/: ClickLib.vcxproj  ClickLib.vcxproj.filters
SPHERE_MT3620/LCDmini_demo/LCDmini_demo/: LCDmini_demo.vcxproj  LCDmini_demo.vcxproj.filters  app_manifest.json  i2c.h  main.c
SPHERE_MT3620/click_demo/: CMakeLists.txt  app_manifest.json  click_demo.sln  main.c  oled_test.c
SPHERE_MT3620/click_demo/Library1/: Library1.c  Library1.vcxproj  Library1.vcxproj.filters
SPHERE_MT3620/click_demo/click_demo/: app_manifest.json  click_demo.vcxproj  click_demo.vcxproj.filters  epoll_timerfd_utilities.h  main.c  oled_test.c
SPHERE_MT3620/flame_demo/: app_manifest.json  flame_demo.sln  main.c
SPHERE_MT3620/flame_demo/ClickLib/: ClickLib.vcxproj  ClickLib.vcxproj.filters
SPHERE_MT3620/flame_demo/Library1/: Library1.vcxproj
SPHERE_MT3620/flame_demo/flame_demo/: app_manifest.json  flame_demo.vcxproj  main.c
SPHERE_MT3620/hr4_demo/: CMakeLists.txt  CMakeSettings.json  app_manifest.json  hr4_demo.sln  main.c
SPHERE_MT3620/hr4_demo/Library1/: Library1.vcxproj  Library1.vcxproj.filters
SPHERE_MT3620/hr4_demo/hr4_demo/: app_manifest.json  hr4_demo.vcxproj  main.c
SPHERE_MT3620/lsm6dsm_demo/: CMakeLists.txt  app_manifest.json  lsm6dsl_demo.c  lsm6dsl_demo.sln
SPHERE_MT3620/lsm6dsm_demo/ClickLib/: ClickLib.c  ClickLib.vcxproj  ClickLib.vcxproj.filters
SPHERE_MT3620/lsm6dsm_demo/Library1/: Library1.c  Library1.vcxproj  Library1.vcxproj.filters
SPHERE_MT3620/lsm6dsm_demo/lsm6dsl_demo/: DISCO_IOT_MultiEvent.ino  app_manifest.json  epoll_timerfd_utilities.c  lsm6dsl_demo.c  lsm6dsl_demo.sln  lsm6dsl_demo.vcxproj  lsm6dsl_demo.vcxproj.filters
SPHERE_MT3620/relay_demo/: CMakeLists.txt  CMakeSettings.json  app_manifest.json  build.sh  main.c  relay_demo.sln
SPHERE_MT3620/relay_demo/ClickLib/: ClickLib.vcxproj  ClickLib.vcxproj.filters
SPHERE_MT3620/relay_demo/relay_demo/: app_manifest.json  main.c  relay_demo.vcxproj
SPHERE_MT3620/tof_demo/: CMakeLists.txt  app_manifest.json  main.c  tof_demo.sln  vl53l0x_i2c.c
SPHERE_MT3620/tof_demo/Library1/: Library1.vcxproj  Library1.vcxproj.filters
SPHERE_MT3620/tof_demo/tof_demo/: app_manifest.json  main.c  tof_demo.vcxproj  tof_demo.vcxproj.filters  vl53l0x_i2c.c
ULTRA96/: iosupport.c  iosupport.h  pins.txt
ULTRA96/LCDmini_demo/: .cproject  .project  LICENSE
ULTRA96/LCDmini_demo/src/: lcdmini_demo.c  lcdmini_ultra96v2.c  lcdmini_ultra96v2.h
ULTRA96/click_demo/: .cproject  .project
ULTRA96/click_demo/src/: c_demo.c
ULTRA96/flame_demo/: .cproject  .project  flame_demo.c
ULTRA96/flame_demo/Debug/: .gitignore  makefile  subdir.mk
ULTRA96/flame_demo/src/: flame_demo.c
ULTRA96/hr4_demo/: .cproject  .project  hr4_demo.c
ULTRA96/hr4_demo/src/: hr4_demo.c
ULTRA96/lsm6dsl_demo/: .cproject  .project  LSM6DSLSensor.c  LSM6DSLSensor.h  Makefile  lsm6dsl_demo  lsm6dsl_demo.c  platform_io.c
ULTRA96/lsm6dsl_demo/src/: lsm6dsl_demo.c
ULTRA96/oled_demo/: oled_demo.c  oled_test.c
ULTRA96/relay_demo/: .cproject  .project
ULTRA96/relay_demo/src/: relay_demo.c
ULTRA96/tester_click/: .cproject  .project
ULTRA96/tester_click/src/: gpio_test.c
ULTRA96/tof_demo/: .cproject  .project  tof_demo.c  vl53l0x_i2c.c
ULTRA96/tof_demo/src/: vl53l0x_i2c.c
